# Scheduler

./: .gitignore  CMakeLists.txt  README.md
client_lib/: scheduler_client.cpp  scheduler_client.hpp
include/: task_data.hpp
platform/mac/: CMakeLists.txt
platform/mac/client_lib/: CMakeLists.txt  scheduler_client.cpp  scheduler_client.hpp
platform/mac/examples/: CMakeLists.txt  ping_test.cpp
platform/mac/include/: local_server.hpp
platform/mac/scheduler/: CMakeLists.txt  local_server.cpp  scheduler_thread.cpp
scheduler/: .scheduler_thread.cpp.swo  CMakeLists.txt  local_server.cpp  local_server.hpp  logger_thread.cpp  logger_thread.hpp  main.cpp  scheduler.cpp  scheduler.hpp  scheduler_thread.cpp  scheduler_thread.hpp  task.cpp  task.hpp
scheduler/test/: CMakeLists.txt  scheduler_test.cpp
